--- a/3.Software/Mini_SDVX_BSP/MDK-ARM/Mini_SDVX/Mini_SDVX.build_log.htm
+++ b/3.Software/Mini_SDVX_BSP/MDK-ARM/Mini_SDVX/Mini_SDVX.build_log.htm
@@ -17,16 +17,20 @@ Library Manager: ArmAr.exe V6.18
 Hex Converter:   FromElf.exe V6.18
 CPU DLL:         SARMCM3.DLL V5.37.0.0
 Dialog DLL:      DCM.DLL V1.17.5.0
-Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.9.0
+Target DLL:      CMSIS_AGDI.dll V1.33.12.0
 Dialog DLL:      TCM.DLL V1.56.1.0
  
 <h2>Project:</h2>
 E:\BaiduSyncdisk\Project\Development\Hardware\MiniSDVX\3.Software\Mini_SDVX_BSP\MDK-ARM\Mini_SDVX.uvprojx
-Project File Date:  10/23/2022
+Project File Date:  11/20/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.18', folder: 'E:\App\IDE\KeilARM\v5\core\ARM\ARMCLANG\Bin'
 Build target 'Mini_SDVX'
+compiling main.c...
+linking...
+Program Size: Code=31118 RO-data=470 RW-data=1012 ZI-data=7700  
+FromELF: creating hex file...
 "Mini_SDVX\Mini_SDVX.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -51,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
