--- a/3.Software/Mini_SDVX_BSP/Mini_SDVX/MDK-ARM/Mini_SDVX/Mini_SDVX.build_log.htm
+++ b/3.Software/Mini_SDVX_BSP/Mini_SDVX/MDK-ARM/Mini_SDVX/Mini_SDVX.build_log.htm
@@ -17,7 +17,7 @@ Library Manager: ArmAr.exe V6.18
 Hex Converter:   FromElf.exe V6.18
 CPU DLL:         SARMCM3.DLL V5.37.0.0
 Dialog DLL:      DCM.DLL V1.17.5.0
-Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.9.0
+Target DLL:      CMSIS_AGDI.dll V1.33.12.0
 Dialog DLL:      TCM.DLL V1.56.1.0
  
 <h2>Project:</h2>
@@ -51,7 +51,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
