--- a/3.Software/Mini_SDVX_BSP/MDK-ARM/Mini_SDVX/Mini_SDVX.build_log.htm
+++ b/3.Software/Mini_SDVX_BSP/MDK-ARM/Mini_SDVX/Mini_SDVX.build_log.htm
@@ -22,14 +22,64 @@ Dialog DLL:      TCM.DLL V1.56.1.0
  
 <h2>Project:</h2>
 E:\BaiduSyncdisk\Project\Development\Hardware\MiniSDVX\3.Software\Mini_SDVX_BSP\MDK-ARM\Mini_SDVX.uvprojx
-Project File Date:  11/20/2022
+Project File Date:  11/21/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.18', folder: 'E:\App\IDE\KeilARM\v5\core\ARM\ARMCLANG\Bin'
-Build target 'Mini_SDVX'
+Rebuild target 'Mini_SDVX'
+assembling startup_stm32f401xc.s...
 compiling main.c...
+compiling usb_otg.c...
+compiling gpio.c...
+compiling dma.c...
+compiling spi.c...
+compiling stm32f4xx_hal_msp.c...
+compiling i2c.c...
+compiling adc.c...
+compiling tim.c...
+compiling stm32f4xx_it.c...
+compiling stm32f4xx_ll_adc.c...
+compiling stm32f4xx_hal_adc.c...
+compiling stm32f4xx_hal_rcc_ex.c...
+compiling stm32f4xx_hal_dma_ex.c...
+compiling stm32f4xx_hal_adc_ex.c...
+compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_hal_flash.c...
+compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_rcc.c...
+compiling stm32f4xx_hal_dma.c...
+compiling stm32f4xx_hal_pwr.c...
+compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_pwr_ex.c...
+compiling stm32f4xx_hal_cortex.c...
+compiling stm32f4xx_hal_exti.c...
+compiling stm32f4xx_hal_i2c_ex.c...
+compiling stm32f4xx_hal.c...
+compiling stm32f4xx_hal_pcd_ex.c...
+compiling stm32f4xx_hal_tim_ex.c...
+compiling bsp_encoder.c...
+compiling stm32f4xx_hal_pcd.c...
+compiling system_stm32f4xx.c...
+compiling bsp_key.c...
+compiling bsp_24c02.c...
+compiling stm32f4xx_hal_spi.c...
+compiling stm32f4xx_ll_usb.c...
+compiling usbd_hid_keyboard.c...
+compiling stm32f4xx_hal_i2c.c...
+compiling usbd_composite.c...
+compiling bsp_rgb.c...
+compiling stm32f4xx_hal_tim.c...
+compiling usbd_ioreq.c...
+compiling usbd_core.c...
+compiling usb_device.c...
+compiling usbd_ctlreq.c...
+compiling usbd_desc.c...
+compiling usbd_conf.c...
+compiling usbd_cdc_acm_if.c...
+compiling usbd_hid_mouse.c...
+compiling usbd_cdc_acm.c...
 linking...
-Program Size: Code=31118 RO-data=470 RW-data=1012 ZI-data=7700  
+Program Size: Code=30594 RO-data=470 RW-data=1012 ZI-data=9492  
 FromELF: creating hex file...
 "Mini_SDVX\Mini_SDVX.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +105,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
